	  compound key)
	- HXL validation now has a #valid_correlation constraint (e.g. make sure
	  that #adm1 and #adm2 are always consistent for any given value
	  of #adm3)
	- HXL validation can now try to infer datatypes without explicit rules
	- HXL validation now calculates edit distance and suggests the
	  closest match when failing validation against a list
	- add "is (not) min" and "is (not) max" support to hxl.model.RowQuery
	- add is_cached flag to hxl.model.Dataset and subclasses
	- updated all AbstractInput to be iterables rather than iterators
	  (for repeatability)
	- removed hxl.common module and added hxl.datatypes, with
	  more-consistent data checking/conversion
	- when importing JSON arrays and objects, flatten them to a usable
	  text representation
	- update docstrings
	- default to case insensitive for validation
	- added static hxl.model.TagPattern.match_list method
	- fixed hxl.filters.ReplaceDataFilter to allow multiple tag patterns

2018-03-29 Release 4.6
	- end support for Python 2 (will die with a RuntimeError;
	  next release will remove Python2 compatibility code relics)
	- start implementing logging support
	- all command-line utilities now have a --log option to set the
  	  logging level
	- restore support for preserving original attribute order (except
	  for JSON object flavoured export)
	- add hxl.Column.get_display_tag method with optional attribute
	  sorting
	- add support for lat/lon normalisation to clean-data filter
	- add purge option to clean_data to allow removing numbers, dates,
	  or lat/lon that can't be parsed during data cleaning
	- fix bug opening a Google Sheet from a CKAN resource URL
	- allow opening a dataset from a CKAN dataset URL (uses first
	  resource)
	- make the 'patterns' parameter optional for the JSON count recipe

2018-02-05 Release 4.5.1
	- bug-fix release: do not let a misspelled date cause a fatal
	  exception

2018-01-31 Release 4.5
	- the merge-data filter now looks for keys in *all* candidate